cmake_minimum_required(VERSION 3.20)
project(moteur) 
set(CMAKE_C_STANDARD 99)
if(MINGW)
    set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} " -Wall")
elseif(MSVC)
    set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} " /W4 /WX ") #/EHsc  /MDd /D_DEBUG
    add_definitions(-D _CRT_SECURE_NO_WARNINGS -D strdup=_strdup)
endif()
set(CMAKE_VERBOSE_MAKEFILE YES)
message("CMAKE_VERSION          = ${CMAKE_VERSION}")
message("CMAKE_GENERATOR        = ${CMAKE_GENERATOR}")
message("MINGW | MSVC           = ${MINGW} | ${MSVC}")
message("CMAKE_BUILD_TYPE       = ${CMAKE_BUILD_TYPE}")
message("CMAKE_C_FLAGS          = ${CMAKE_C_FLAGS}")
message("CMAKE_C_FLAGS_DEBUG    = ${CMAKE_C_FLAGS_DEBUG}")
message("CMAKE_C_FLAGS_RELEASE  = ${CMAKE_C_FLAGS_RELEASE}")
message("CMAKE_C_COMPILER       = ${CMAKE_C_COMPILER}")

add_executable(main main.c libs.c libs.h)
